...
    const val PlaceholderLocation = "Search locations…"

    const val Collapse = "Collapse"
    const val Expand = "Expand"

    const val ClosedMsg = "Closed"
    const val Open24Msg = "Open 24 hours"
  }

  val dayNames: List<String> by lazy {
    val weekdays = DateFormatSymbols().weekdays
    (0..6).map { idx -> weekdays.getOrNull(idx + 1) ?: "Day ${idx + 1}" }
  }
...
